Revert "footer hiding contact links on mobile. trying to fix"
This reverts commit c24ae63eac9e513b2beb3e8514cd551598c625e8.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2047,7 +2047,7 @@ p.bio {
 
 			#copyright {
 				margin-top: 6em;
-				padding-top: 15px;
+				padding-top: 4em;
 			}
 
 	}
@@ -2136,7 +2136,7 @@ p.bio {
 
 			#copyright {
 				margin-top: 5em;
-				padding-top: 10px;
+				padding-top: 2em;
 			}
 
 	}
@@ -2511,7 +2511,7 @@ p.bio {
 
 			#copyright {
 				margin-top: 2em;
-				padding-top: 10px;
+				padding-top: 2em;
 			}
 
 	}
